--- a/src/_includes/components/sticky-cta.html
+++ b/src/_includes/components/sticky-cta.html
@@ -1,8 +1,44 @@
 <div class="sticky-div">
-  <a href="tel:{{ client.phoneForTel }}" class="bespoke-button-solid"
-    >Call for a Free Quote</a
+  <a href="tel:{{ client.phoneForTel }}" class="bespoke-button-solid">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="24"
+      height="24"
+      viewBox="0 0 24 24"
+      fill="none"
+      stroke="currentColor"
+      stroke-width="2"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="lucide lucide-phone-icon lucide-phone"
+    >
+      <path
+        d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
+      />
+    </svg>
+
+    FREE Quote</a
   >
-  <a href="/contact/" class="bespoke-button-solid">Book Online</a>
+  <a href="/contact/" class="bespoke-button-solid">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="24"
+      height="24"
+      viewBox="0 0 24 24"
+      fill="none"
+      stroke="currentColor"
+      stroke-width="2"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="lucide lucide-thumbs-up-icon lucide-thumbs-up"
+    >
+      <path d="M7 10v12" />
+      <path
+        d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2a3.13 3.13 0 0 1 3 3.88Z"
+      />
+    </svg>
+    Get Approved
+  </a>
 </div>
 
 <style>
@@ -32,7 +68,7 @@
   }
 
   .sticky-div .bespoke-button-solid {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0;
     line-height: 2rem;
     border-radius: 0;
     font-weight: 600;
@@ -46,16 +82,21 @@
       0px 1px 2px rgb(0 0 0 / 0.1),
       0px 3px 2px rgb(0 0 0 / 0.1),
       0px 4px 8px rgb(0 0 0 / 0.1);
+
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.3rem;
   }
 
   .sticky-div .bespoke-button-solid:first-child {
-    background-color: var(--primary);
-    color: white;
+    background-color: #cedff0;
+    color: var(--primary);
   }
 
   .sticky-div .bespoke-button-solid:last-child {
     background-color: var(--primaryLight);
-    color: white;
+    color: var(--primary);
   }
 
   .sticky-div .bespoke-button-solid:hover {
