--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -6,7 +6,7 @@
 
 @media only screen and (min-width: 0rem) {
   .canada-banner {
-    --canadaBannerHeight: (152/16rem);
+    --canadaBannerHeight: 80px;
     position: absolute;
     top: var(--canadaBannerHeight);
     z-index: 2;
@@ -79,6 +79,12 @@
         width: 7%;
       }
     }
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 63.99rem) {
+  .canada-banner {
+    --canadaBannerHeight: 152px;
   }
 }
 
