--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -699,6 +699,13 @@
     display: block;
   }
 }
+
+@media only screen and (max-width: 767px) {
+  #cs-navigation .cs-bottom-bar {
+    display: none;
+  }
+}
+
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
   #cs-navigation {
@@ -1684,6 +1691,16 @@ body {
   li:nth-child(3)
   .carousel-bullet {
   color: #428bca;
+}
+
+@media only screen and (max-width: 768px) {
+  .carousel {
+    margin-top: 135px;
+
+    .carousel-inner {
+      padding-top: 0;
+    }
+  }
 }
 
 @media only screen and (min-width: 0rem) {
