chore: change color for cta button and banner

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -13,8 +13,8 @@
     width: 100%;
     display: grid;
     place-items: center;
-    // background: var(--canada-banner-bg);
-    background-color: var(--primaryLight);
+    background: var(--canada-banner-bg);
+    // background-color: var(--primaryLight);
     padding: (12/16rem);
 
     text-shadow:
