--- a/src/_includes/components/sticky-cta.html
+++ b/src/_includes/components/sticky-cta.html
@@ -59,12 +59,6 @@
     box-shadow:
       0 -4px 6px -1px rgb(0 0 0 / 0.1),
       0 2px 4px -2px rgb(0 0 0 / 0.1);
-
-    @starting-style {
-      visibility: hidden;
-      opacity: 0;
-      transform: translateY(50%);
-    }
   }
 
   .sticky-div .bespoke-button-solid {
@@ -95,8 +89,9 @@
   }
 
   .sticky-div .bespoke-button-solid:last-child {
-    background-color: var(--primaryLight);
-    color: var(--primary);
+    /* background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%); */
+    color: white;
+    background-color: #28a745;
   }
 
   .sticky-div .bespoke-button-solid:hover {
