--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -11,7 +11,7 @@
     width: 100%;
     display: grid;
     place-items: center;
-    background-color: var(--primaryLight);
+    background: var(--canada-banner-bg);
     padding: 0.75rem;
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15), 0px 3px 2px rgba(0, 0, 0, 0.15), 0px 4px 8px rgba(0, 0, 0, 0.15);
   }
