chore: fix href of stikcy buttons

--- a/src/_includes/components/sticky-cta.html
+++ b/src/_includes/components/sticky-cta.html
@@ -1,5 +1,5 @@
 <div class="sticky-div">
-  <a href="tel:{{ client.phoneForTel }}" class="bespoke-button-solid">
+  <a href="tel:{{ client.phoneFormatted }}" class="bespoke-button-solid">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       width="24"
@@ -19,7 +19,10 @@
 
     FREE Quote</a
   >
-  <a href="/contact/" class="bespoke-button-solid">
+  <a
+    href="https://www.financeit.ca/en/direct/payment-plan/YT0yNzEzNTcmbD0mcD1QemIwb1duaDZNemhEa3hkSTQ5Z1R3JnM9MCZ2PTE=/apply?slug=PBTFXw"
+    class="bespoke-button-solid"
+  >
     <svg
       xmlns="http://www.w3.org/2000/svg"
       width="24"
