--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -14,9 +14,11 @@
           width="264"
           height="78"
       /></a>
-      <p>Exceptional renovation and plumbing services you can trust.</p>
-      <div>
-        <p>Get Pre-Approved in Seconds! Click here</p>
+      <p class="text">
+        Exceptional renovation and plumbing services you can trust.
+      </p>
+      <div class="cta">
+        <p>Get Pre-Approved in Seconds! <strong>Click here:</strong></p>
         <a
           href="https://www.financeit.ca/en/direct/payment-plan/YT0yNzEzNTcmbD0mcD1QemIwb1duaDZNemhEa3hkSTQ5Z1R3JnM9MCZ2PTE=/apply?slug=PBTFXw"
           target="_blank"
