--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -3817,8 +3817,13 @@ body.dark-mode .cs-button-5:before {
 
   .left-section {
     margin: auto;
-    margin-bottom: 3.125rem;
+    // margin-bottom: 3.125rem;
+    margin-bottom: 2.125rem;
     text-align: center;
+    display: grid;
+    grid-template-areas: "logo cta" "text text";
+    grid-template-columns: 1fr 1fr;
+    column-gap: 0.3rem;
 
     .logo {
       display: inline-block;
@@ -3827,6 +3832,7 @@ body.dark-mode .cs-button-5:before {
       height: 2em;
       width: auto;
       text-align: center;
+      grid-area: logo;
 
       img {
         display: block;
@@ -3835,7 +3841,7 @@ body.dark-mode .cs-button-5:before {
       }
     }
 
-    p {
+    .text {
       opacity: 0.9;
       margin: auto;
       width: 100%;
@@ -3843,6 +3849,31 @@ body.dark-mode .cs-button-5:before {
       line-height: 1.92857143rem;
       color: #fff;
       text-align: center;
+      grid-area: text;
+    }
+
+    .cta {
+      grid-area: cta;
+      aspect-ratio: 16/9;
+      margin-bottom: 1.875rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: end;
+      align-items: center;
+      gap: 0.3rem;
+
+      p {
+        font-size: (12/16rem);
+        color: #fff;
+      }
+
+      img {
+        display: block;
+        width: 100%;
+        height: auto;
+        max-width: 155px;
+        min-height: 30px;
+      }
     }
   }
 
@@ -3980,16 +4011,33 @@ body.dark-mode .cs-button-5:before {
       margin: 0;
       width: 25.5625rem;
       text-align: left;
+      grid-template-areas: "logo" "text" "cta";
+      gap: 1rem;
 
       .logo {
         margin-left: 0;
         height: 4rem;
         text-align: left;
+        margin-bottom: 0;
       }
 
       p {
         margin-left: 0;
         text-align: left;
+      }
+
+      .cta {
+        justify-content: unset;
+        gap: 0.5rem;
+
+        p {
+          font-size: 1rem;
+        }
+
+        img {
+          max-width: 320px;
+          max-height: 64px;
+        }
       }
     }
 
