--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -3430,6 +3430,10 @@ body.dark-mode .cs-button-5:before {
   height: auto;
   max-width: 155px;
   min-height: 30px;
+  transition: transform 200ms;
+}
+#footer .left-section .cta:hover img {
+  transform: scale(1.05);
 }
 #footer .right-section {
   margin: auto;
