--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -3873,6 +3873,13 @@ body.dark-mode .cs-button-5:before {
         height: auto;
         max-width: 155px;
         min-height: 30px;
+        transition: transform 200ms;
+      }
+
+      &:hover {
+        img {
+          transform: scale(1.05);
+        }
       }
     }
   }
