--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -22,6 +22,9 @@
 
     --canadaBannerHeight: 6.5rem;
     --canada-banner-bg: #28a745;
+    --text-shadow-lg:
+      0px 1px 2px rgb(0 0 0 / 0.25), 0px 3px 2px rgb(0 0 0 / 0.25),
+      0px 4px 8px rgb(0 0 0 / 0.25);
   }
   .cs-topper {
     display: block;
