--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -21,6 +21,8 @@
     --sectionPadding: clamp(3.75rem, 7.82vw, 6.25rem) 1rem;
     --canadaBannerHeight: 6.5rem;
     --canada-banner-bg: #28a745;
+    --text-shadow-lg: 0px 1px 2px rgba(0, 0, 0, 0.25), 0px 3px 2px rgb(0 0 0 / 0.25),
+      0px 4px 8px rgb(0 0 0 / 0.25);
   }
   .cs-topper {
     display: block;
