--- a/src/assets/less/fence-deck.less
+++ b/src/assets/less/fence-deck.less
@@ -1,4 +1,145 @@
 /*-- -------------------------- -->
+<---      Nav-bar override      -->
+<--- -------------------------- -*/
+
+@media only screen and (min-width: 0rem) {
+  body.scroll {
+    header#cs-navigation {
+      backdrop-filter: blur(30px);
+      // background: linear-gradient(
+      //   280deg,
+      //   transparent 0%,
+      //   #1055bcba 40% 60%,
+      //   transparent 100%
+      // );
+      .cs-top-bar {
+        &::before {
+          opacity: 1;
+          transform: scaleX(1); // Expand to full width
+        }
+      }
+      .cs-li-link {
+        &:hover {
+          color: var(--primaryLight);
+        }
+      }
+    }
+  }
+
+  header#cs-navigation {
+    background: transparent;
+    box-shadow: none;
+
+    .cs-top-bar {
+      position: relative;
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(
+          280deg,
+          transparent 0%,
+          #1055bcba 35% 65%,
+          transparent 100%
+        );
+        opacity: 0;
+        transform: scaleX(0); // Start at 50% width
+        transform-origin: center;
+        transition:
+          transform 1s ease,
+          opacity 0.2s ease;
+        z-index: -1;
+      }
+
+      .cs-top-container {
+        background: transparent;
+      }
+
+      .cs-logo {
+        img {
+          // drop-shadow: 0 4px 4px rgb(0 0 0 / 0.3);
+        }
+      }
+
+      .cs-toggle {
+        background: transparent;
+      }
+
+      .cs-contact-link {
+        display: none;
+      }
+      .cs-button-solid {
+        display: none;
+      }
+    }
+
+    .cs-li-link {
+      &:hover {
+        color: var(--primary);
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1023px) {
+  header#cs-navigation {
+    .cs-top-container {
+      .cs-contact-group {
+        .cs-toggle {
+          display: flex;
+        }
+      }
+    }
+
+    .cs-bottom-bar {
+      .cs-container {
+        padding: 0;
+      }
+      .cs-call {
+        display: none;
+      }
+    }
+
+    .cs-nav {
+      & > .cs-toggle {
+        display: none;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  header#cs-navigation {
+    .cs-bottom-bar {
+      .cs-call {
+        display: none;
+      }
+      .cs-nav {
+        position: fixed;
+        top: 0.5rem;
+        left: 60%;
+        transform: translateX(-40%);
+
+        .cs-toggle {
+          display: none;
+        }
+      }
+    }
+  }
+}
+/*-- -------------------------- -->
+<---      sticky - override   -->
+<--- -------------------------- -*/
+
+@media only screen and (min-width: 0rem) {
+  div.sticky-div {
+    display: none;
+  }
+}
+/*-- -------------------------- -->
 <---           Hero             -->
 <--- -------------------------- -*/
 
@@ -8,10 +149,11 @@
     min-height: 100dvh;
     /* 200px - 300px top */
     /* 60px - 100px bottom */
-    padding: clamp(12.5rem, 12vw, 18.75rem) (16/16rem)
-      clamp(3.75rem, 8vw, 6.25rem) (16/16rem);
+    // padding: clamp(12.5rem, 12vw, 18.75rem) (16/16rem)
+    //   clamp(3.75rem, 8vw, 6.25rem) (16/16rem);
+    padding: clamp(8rem, 8vw, 12.75rem) 1rem clamp(3.75rem, 8vw, 6.25rem) 1rem;
     display: flex;
-    align-items: flex-end;
+    align-items: stretch;
     position: relative;
     z-index: 1;
 
@@ -21,8 +163,8 @@
       margin: 0 auto;
       display: flex;
       flex-direction: column;
-      justify-content: flex-end;
-      align-items: flex-end;
+      // justify-content: flex-end;
+      // align-items: flex-end;
       /* 60px - 180px */
       gap: clamp(3.75rem, 13vw, 11.25rem);
     }
@@ -31,10 +173,12 @@
       /* set text align to left if content needs to be left aligned */
       text-align: left;
       width: 100%;
+      height: 100%;
       display: flex;
       flex-direction: column;
+      justify-content: space-between;
       /* centers content horizontally, set to flex-start to left align */
-      align-items: flex-start;
+      align-items: center;
     }
 
     .cs-title {
@@ -42,6 +186,24 @@
       font-size: clamp(2.4375rem, 5vw, 3.8125rem);
       margin-bottom: (28/16rem);
       color: #fff;
+      text-align: center;
+    }
+
+    .cs-h2 {
+      /* 39px - 61px */
+      font-size: clamp(2.0375rem, 6vw, 3.2125rem);
+      color: #28a745;
+      position: relative;
+      text-shadow: var(--text-shadow-lg);
+
+      &:after {
+        content: "";
+        position: absolute;
+        inset: 0;
+        filter: blur(10px);
+        background-color: rgba(0, 0, 0, 0.15);
+        z-index: -1;
+      }
     }
 
     .cs-text {
@@ -54,6 +216,72 @@
 
     .cs-flex-group {
       max-width: (480/16rem);
+      position: relative;
+      text-shadow: var(--text-shadow-lg);
+
+      .cs-h2 {
+        width: 100%;
+        margin-bottom: 1rem;
+      }
+
+      .cs-sub-group {
+        display: grid;
+        grid-template-areas: "text text" "logo img";
+        grid-template-columns: auto auto;
+
+        img {
+          float: right;
+          grid-area: img;
+          // margin: 0 0 0.5rem 1rem;
+          width: 200px;
+          aspect-ratio: 1/1;
+          height: auto;
+          justify-self: start;
+        }
+
+        .cs-text {
+          grid-area: text;
+          // margin-bottom: 2rem;
+          text-transform: uppercase;
+          font-size: clamp(1rem, 3vw, 1.5rem);
+          margin-bottom: 0;
+        }
+
+        .arrow-logo {
+          grid-area: logo;
+          color: var(--bodyTextColorWhite);
+          justify-self: end;
+
+          svg {
+            transform: scaleX(-1) rotate(344deg);
+          }
+        }
+      }
+
+      .cs-h3 {
+        font-size: clamp(1.5rem, 5vw, 2.3rem);
+        color: var(--bodyTextColorWhite);
+        margin: 0.5rem 0;
+        text-transform: uppercase;
+        text-align: center;
+      }
+
+      .cs-number {
+        clear: left;
+        font-weight: bold;
+        margin-top: 0.25rem;
+        text-transform: uppercase;
+        font-size: clamp(2.4375rem, 5vw, 3.8125rem);
+        color: var(--bodyTextColorWhite);
+        text-align: center;
+      }
+
+      // Final clearfix to prevent container collapse
+      &::after {
+        content: "";
+        display: table;
+        clear: both;
+      }
     }
 
     .cs-button-solid {
@@ -138,9 +366,10 @@
   #hero-1950 {
     .cs-content {
       text-align: left;
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: flex-start;
+      // flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      height: 100%;
       gap: (32/16rem);
     }
 
@@ -150,19 +379,64 @@
       margin-bottom: 0;
       /* prevents flexbox from squishing it */
       flex: none;
+      text-align: center;
     }
 
     .cs-flex-group {
-      max-width: (480/16rem);
+      max-width: (800/16rem);
+      display: grid;
+      grid-template-areas: "h2 h2 h2" "text text arrow" "h3 img img" "number img img";
+      position: relative;
+
+      .cs-h2 {
+        grid-area: h2;
+        width: 100%;
+        place-self: center;
+        text-align: center;
+      }
+
+      .cs-qr {
+        grid-area: img;
+        max-width: (350/16rem);
+        width: 100%;
+      }
+
+      .cs-text {
+        grid-area: text;
+        text-align-last: end;
+      }
+
+      .cs-h3 {
+        grid-area: h3;
+      }
+
+      .cs-number {
+        grid-area: number;
+      }
+
+      .cs-sub-group {
+        display: contents;
+
+        .arrow-logo {
+          grid-area: arrow;
+
+          svg {
+            transform: rotate(244deg);
+
+            filter: drop-shadow(0 4px 4px rgb(0 0 0 / 0.5));
+          }
+        }
+      }
     }
   }
 }
 
 /* Large Desktop Parallax Effect - 100px */
 @media only screen and (min-width: 100rem) {
+  // @media only screen and (min-width: 0rem) {
   #hero-1950 {
     .cs-background {
-      background: url("/assets/images/fence/fence-bg.avif");
+      background: url("/assets/images/fence/fence-bg-alt.avif");
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
