--- a/src/assets/css/fence-deck.css
+++ b/src/assets/css/fence-deck.css
@@ -45,9 +45,6 @@
   header#cs-navigation .cs-top-bar .cs-button-solid {
     display: none;
   }
-  header#cs-navigation .cs-li-link:hover {
-    color: var(--primary);
-  }
 }
 @media only screen and (max-width: 1023px) {
   header#cs-navigation .cs-top-container .cs-contact-group .cs-toggle {
@@ -70,11 +67,23 @@
   header#cs-navigation .cs-bottom-bar .cs-nav {
     position: fixed;
     top: 0.5rem;
-    left: 60%;
-    transform: translateX(-40%);
+    left: 58%;
+    transform: translateX(-47%);
   }
   header#cs-navigation .cs-bottom-bar .cs-nav .cs-toggle {
     display: none;
+  }
+  header#cs-navigation .cs-bottom-bar .cs-li-link {
+    color: rgba(255, 255, 255, 0.75);
+  }
+  header#cs-navigation .cs-bottom-bar .cs-li-link:hover {
+    filter: brightness(2);
+  }
+}
+@media only screen and (min-width: 1200px) {
+  header#cs-navigation .cs-bottom-bar .cs-nav {
+    left: 60%;
+    transform: translateX(-40%);
   }
 }
 /*-- -------------------------- -->
@@ -122,14 +131,22 @@
   }
   #hero-1950 .cs-title {
     /* 39px - 61px */
-    font-size: clamp(2.4375rem, 5vw, 3.8125rem);
+    font-size: clamp(2.6375rem, 6vw, 4.0125rem);
     margin-bottom: 1.75rem;
     color: #fff;
     text-align: center;
   }
+  #hero-1950 .cs-title:after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    filter: blur(10px);
+    background-color: rgba(0, 0, 0, 0.15);
+    z-index: -1;
+  }
   #hero-1950 .cs-h2 {
     /* 39px - 61px */
-    font-size: clamp(2.0375rem, 6vw, 3.2125rem);
+    font-size: clamp(2.0375rem, 6vw, 3.5125rem);
     color: #28a745;
     position: relative;
     text-shadow: var(--text-shadow-lg);
@@ -160,13 +177,16 @@
   }
   #hero-1950 .cs-flex-group .cs-sub-group {
     display: grid;
-    grid-template-areas: "text text" "logo img";
+    grid-template-areas: "text text" "logo img" "cta img";
     grid-template-columns: auto auto;
+    column-gap: 0.8rem;
+    margin-bottom: 1rem;
   }
   #hero-1950 .cs-flex-group .cs-sub-group img {
     float: right;
     grid-area: img;
-    width: 200px;
+    max-width: 200px;
+    width: 100%;
     aspect-ratio: 1/1;
     height: auto;
     justify-self: start;
@@ -184,6 +204,24 @@
   }
   #hero-1950 .cs-flex-group .cs-sub-group .arrow-logo svg {
     transform: scaleX(-1) rotate(344deg);
+  }
+  #hero-1950 .cs-flex-group .cs-sub-group .cta-group {
+    grid-area: cta;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    text-transform: uppercase;
+  }
+  #hero-1950 .cs-flex-group .cs-sub-group .cta-group p {
+    text-align: center;
+    color: var(--bodyTextColorWhite);
+    font-size: clamp(1rem, 3vw, 1.5rem);
+  }
+  #hero-1950 .cs-flex-group .cs-sub-group .cta-group .cs-button-solid {
+    padding: 0 clamp(1rem, 2vw, 2rem);
+    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
   }
   #hero-1950 .cs-flex-group .cs-h3 {
     font-size: clamp(1.5rem, 5vw, 2.3rem);
@@ -289,8 +327,9 @@
   #hero-1950 .cs-flex-group {
     max-width: 50rem;
     display: grid;
-    grid-template-areas: "h2 h2 h2" "text text arrow" "h3 img img" "number img img";
+    grid-template-areas: "h2 h2 h2" "text text arrow" "cta img img" "h3 img img" "number img img";
     position: relative;
+    column-gap: 1rem;
   }
   #hero-1950 .cs-flex-group .cs-h2 {
     grid-area: h2;
@@ -298,14 +337,11 @@
     place-self: center;
     text-align: center;
   }
-  #hero-1950 .cs-flex-group .cs-qr {
-    grid-area: img;
-    max-width: 21.875rem;
-    width: 100%;
-  }
   #hero-1950 .cs-flex-group .cs-text {
     grid-area: text;
     text-align-last: end;
+    height: fit-content;
+    align-self: center;
   }
   #hero-1950 .cs-flex-group .cs-h3 {
     grid-area: h3;
@@ -316,12 +352,26 @@
   #hero-1950 .cs-flex-group .cs-sub-group {
     display: contents;
   }
+  #hero-1950 .cs-flex-group .cs-sub-group .cs-qr {
+    grid-area: img;
+    max-width: 17.1875rem;
+    width: 100%;
+  }
   #hero-1950 .cs-flex-group .cs-sub-group .arrow-logo {
     grid-area: arrow;
   }
   #hero-1950 .cs-flex-group .cs-sub-group .arrow-logo svg {
     transform: rotate(244deg);
     filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.5));
+  }
+  #hero-1950 .cs-flex-group .cs-sub-group .cta-group {
+    grid-area: cta;
+    height: fit-content;
+    flex-direction: row;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    justify-self: end;
+    padding-right: 1rem;
   }
 }
 /* Large Desktop Parallax Effect - 100px */
