--- a/src/assets/less/fence-deck.less
+++ b/src/assets/less/fence-deck.less
@@ -263,6 +263,7 @@
           aspect-ratio: 1/1;
           height: auto;
           justify-self: start;
+          border-radius: 6px;
         }
 
         .cs-text {
