--- a/src/assets/less/fence-deck.less
+++ b/src/assets/less/fence-deck.less
@@ -107,6 +107,13 @@
 
 @media only screen and (min-width: 1024px) {
   header#cs-navigation {
+
+      .cs-logo{
+        img{
+            width: 75%;
+        }
+      }
+
     .cs-bottom-bar {
       .cs-call {
         display: none;
@@ -116,13 +123,15 @@
         top: 0.5rem;
         // left: 60%;
         // transform: translateX(-40%);
-        left: 58%;
-        transform: translateX(-47%);
+        // left: 58%;
+        // transform: translateX(-47%);
+        left: (245/16rem);
 
         .cs-toggle {
           display: none;
         }
       }
+
 
       .cs-li-link {
         color: rgba(255, 255, 255, 0.75);
@@ -136,6 +145,12 @@
 
 @media only screen and (min-width: 1200px) {
   header#cs-navigation {
+      .cs-logo{
+        img{
+            width: 100%;
+        }
+      }
+
     .cs-bottom-bar {
       .cs-nav {
         left: 60%;
