--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1161,7 +1161,8 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 2.25rem;
+    // gap: 2.25rem;
+    gap: 1.5rem;
   }
   #cs-navigation .cs-li {
     list-style: none;
