--- a/src/assets/less/fence-deck.less
+++ b/src/assets/less/fence-deck.less
@@ -187,7 +187,8 @@
     /* 60px - 100px bottom */
     // padding: clamp(12.5rem, 12vw, 18.75rem) (16/16rem)
     //   clamp(3.75rem, 8vw, 6.25rem) (16/16rem);
-    padding: clamp(5rem, 5.5vw, 9.75rem) 1rem clamp(3.75rem, 7vw, 4.25rem) 1rem;
+    // padding: clamp(5rem, 5.5vw, 9.75rem) 1rem clamp(3.75rem, 7vw, 4.25rem) 1rem;
+    padding: clamp(4rem, 5vw, 6.75rem) 1rem clamp(3.75rem, 7vw, 4.25rem) 1rem;
     display: flex;
     align-items: stretch;
     position: relative;
