--- a/src/assets/less/fence-deck.less
+++ b/src/assets/less/fence-deck.less
@@ -153,7 +153,7 @@
 
     .cs-bottom-bar {
       .cs-nav {
-        left: 55%;
+        left: 55% !important;
         transform: translateX(-40%);
       }
     }
