--- a/src/assets/css/review.css
+++ b/src/assets/css/review.css
@@ -73,3 +73,15 @@
   .powered a:hover {
     text-decoration: underline;
   }
+
+  @media only screen and (min-width: 0rem){
+    .review-container{
+      margin-top: 6rem;
+      margin-bottom: 5rem;
+    }
+  }
+  @media only screen and (min-width: 48rem){
+    .review-container{
+      margin-top: 15rem;
+    }
+  }
