--- a/src/assets/css/review.css
+++ b/src/assets/css/review.css
@@ -76,6 +76,7 @@
 
   @media only screen and (min-width: 0rem){
     .review-container{
+      margin: auto;
       margin-top: 6rem;
       margin-bottom: 5rem;
     }
