--- a/src/assets/less/review.less
+++ b/src/assets/less/review.less
@@ -1,5 +1,6 @@
 @media only screen and (min-width: 0rem){
     .review-container{
+      margin: auto;
       margin-top: 6rem;
       margin-bottom: 5rem;
     }
