--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -58,6 +58,9 @@
           <li>
             <a href="/gallery">Gallery</a>
           </li>
+          <li>
+            <a href="/review">Review</a>
+          </li>
         </ul>
         <ul>
           <li>
