--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -4115,9 +4115,11 @@ body.dark-mode .cs-button-5:before {
   }
 }
 @media only screen and (min-width:79rem){
-  #footer .left-section{
-    margin-left: 2.5rem;
-  }
+  #footer{
+    .left-section{
+      margin-left: 2.5rem;
+    }
+  } 
 }
 /* Dark Mode - Kept separate as it modifies a parent element */
 @media only screen and (min-width: 0rem) {
