--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -4024,6 +4024,7 @@ body.dark-mode .cs-button-5:before {
       text-align: left;
       grid-template-areas: "logo" "text" "cta";
       gap: 1rem;
+      margin-left: 2.5rem;
 
       .logo {
         margin-left: 0;
