--- a/src/assets/less/contact.less
+++ b/src/assets/less/contact.less
@@ -518,6 +518,10 @@
   }
   /* Desktop - 1024px */
   @media only screen and (min-width: 64rem) {
+    #contact-1750{
+      max-width: 85rem;
+      margin: auto;
+    }
     #contact-1750 .cs-container {
       width: 65%;
       max-width: 64rem;
