contact page update

--- a/src/assets/less/contact.less
+++ b/src/assets/less/contact.less
@@ -504,6 +504,8 @@
   @media only screen and (min-width: 48rem) {
     #contact-1750 {
       /* using flex: 1 on both group elements to ensure they're both the same width */
+      max-width: 85rem;
+      margin: auto;
     }
     #contact-1750 .cs-container {
       flex-direction: row;
