--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -4016,6 +4016,9 @@ body.dark-mode .cs-button-5:before {
       max-width: 82.5rem;
       width: 96%;
       padding: 0;
+      .left-section{
+        margin-left: 2.5rem;
+      }
     }
 
     .left-section {
@@ -4112,6 +4115,9 @@ body.dark-mode .cs-button-5:before {
       .copyright {
         display: inline-block;
       }
+    }
+    .left-section{
+      margin-left: 2.5rem;
     }
   }
 }
