--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -3,7 +3,7 @@
 <!-- ============================================ -->
 
 <footer id="footer">
-  <div class="container">
+  <div class="container" style="max-width: 79rem;">
     <div class="left-section">
       <a class="logo" href="/"
         ><img
