--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -3,6 +3,7 @@
 <!-- ============================================ -->
 
 <footer id="footer">
+  <!-- Added inline css, root.css/root.less not updating -->
   <div class="container" style="max-width: 77rem;">
     <div class="left-section">
       <a class="logo" href="/"
