--- a/src/assets/less/renovation.less
+++ b/src/assets/less/renovation.less
@@ -872,7 +872,15 @@
   
                                 
   
-  
+//   fence and deck financing
+
+@media only screen and (max-width:600px){
+    #hero-408{
+        .cs-button-solid{
+            font-size: (8/16rem);
+        }
+    }
+}
   
   
   
