--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -51,6 +51,9 @@
             <a href="/renovation">Renovation</a>
           </li>
           <li>
+            <a href="/fence-deck-installation">Fence & Deck</a>
+          </li>
+          <li>
             <a href="/blog">Blog</a>
           </li>
           <li>
@@ -70,6 +73,7 @@
           <li>Plumbing</li>
           <li>Gasfitting</li>
           <li>Renovation</li>
+          <li>Fence & Deck Installation</li>
         </ul>
         <ul>
           <li>
